--- a/education.html
+++ b/education.html
@@ -16,20 +16,34 @@
 <body>
     <header>
         <header class="perfil">
+
             <img class="perfil-imagem" src="assets/foto-renata.jpg" alt="Foto Renata">
-            <div>
-                <h2 class="perfil-titulo">Renata Aline De Oliveira</h2>
-                <spam>Desenvolvedora Front-End</spam>
-            </div>
+
         </header>
-        <section class="menu">
+        <section class="apresentacao">
+
+            <h2 class="apresentacao_titulo">FORMAÇÃO</h2>
+            <p class="apresentacao_conteudo">
+                Sou estudante de Análise e Desenvolvimento de Sistemas na UNINTER e também estou buscando aprimorar meu
+                conhecimento
+                linguístico estudando inglês.
+                Para melhorar minhas abilidades,tenho buscado aperfeiçoamento na plataforma ALURA onde estudo
+                programação
+                voltada
+                para Desenvolvimento front-end.
+
+            </p>
+
+        </section>
+        <section>
             <ul class="menu_links">
+                <li class="menu_links-link"><a href="index.html">Home</a></li>
                 <li class="menu_links-link"><a href="about.html">Sobre Mim</a></li>
-                <li class="menu_links-link"><a href="education.html">Formação</a></li>
                 <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
-               
+
             </ul>
         </section>
+
 
         <footer class="rodape">
             <p>Acesse minhas redes:</p>
@@ -38,12 +52,10 @@
                     <img src="assets/logogit.png" alt="logo github" target="blank" class="rodape_links-icone">
                 </a>
                 <a href="https://instagram.com/renataaolyveira">
-                    <img src="assets/logoinsta.png" alt="logo instagram" target="blank"
-                        class="rodape_links-icone">
+                    <img src="assets/logoinsta.png" alt="logo instagram" target="blank" class="rodape_links-icone">
                 </a>
                 <a href="https://www.linkedin.com/in/renata-aline-oliveira-3a1766270/">
-                    <img src="assets/logolinkedin.png" alt="Logo linkedin" target="blank"
-                        class="rodape_links-icone">
+                    <img src="assets/logolinkedin.png" alt="Logo linkedin" target="blank" class="rodape_links-icone">
                 </a>
                 <a href="https://api.whatsapp.com/send?phone=5511986100092">
                     <img src="assets/logowhats.png" alt="logo whatsapp" target="blank" class="rodape_links-icone">
@@ -51,8 +63,6 @@
             </div>
 
         </footer>
-        
 </body>
-
 
 </html>
