media query e ajuste de codigo

--- a/index.html
+++ b/index.html
@@ -14,45 +14,60 @@
 </head>
 
 <body>
-    <header>
-        <header class="perfil">
-            <img class="perfil-imagem" src="assets/foto-renata.jpg" alt="Foto Renata">
-            <div>
-                <h2 class="perfil-titulo">Renata Aline De Oliveira</h2>
-                <spam>Desenvolvedora Front-End</spam>
-            </div>
-        </header>
-        <section class="menu">
-            <ul class="menu_links">
-                <li class="menu_links-link"><a href="about.html">Sobre Mim</a></li>
-                <li class="menu_links-link"><a href="education.html">Formação</a></li>
-                <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
-               
-            </ul>
-        </section>
+    <div class="wrapper">
+        <header>
+            <header class="profile">
+                <img class="avatar" src="assets/foto-renata.jpg" alt="Foto Renata">
+                <div>
+                    <h1 class="profile-title">Renata Aline De Oliveira</h1>
+                    <spam class="profile-subtitle">Desenvolvedora Front-End</spam>
+                </div>
+            </header>
+            <main>
+                <section class="main-content">
+                    <h2 class="title">SOBRE MIM</h2>
+                    <p class="presentation_content">
+                        Meu nome é Renata.
+                        Amo viajar e sou bem aventureira ,apaixonada por esportes, principalmente os que pratico em meio
+                        a
+                        natureza.
+                        Trabalho como babá e estou fasendo transição de carreira para área de tecnologia.
+                        Nesse momento estou visando plano de carreira e crescimento profissional .
+                        Escolhi estudar tecnologia porque é uma área que tenho bastante interesse
+                        ,é uma área que abre portas para oportunidades profissionais
+                        e te prepara para um mundo em constante mudanças.
 
-        <footer class="rodape">
-            <p>Acesse minhas redes:</p>
-            <div class="rodape_links">
-                <a href="https://github.com/renata-aline">
-                    <img src="assets/logogit.png" alt="logo github" target="blank" class="rodape_links-icone">
-                </a>
-                <a href="https://instagram.com/renataaolyveira">
-                    <img src="assets/logoinsta.png" alt="logo instagram" target="blank"
-                        class="rodape_links-icone">
-                </a>
-                <a href="https://www.linkedin.com/in/renata-aline-oliveira-3a1766270/">
-                    <img src="assets/logolinkedin.png" alt="Logo linkedin" target="blank"
-                        class="rodape_links-icone">
-                </a>
-                <a href="https://api.whatsapp.com/send?phone=5511986100092">
-                    <img src="assets/logowhats.png" alt="logo whatsapp" target="blank" class="rodape_links-icone">
-                </a>
-            </div>
+                    </p>
 
-        </footer>
-        
+                </section>
+                <nav class="menu">
+                    <ul class="menu_links">
+                        <li class="menu_links-link active"><a href="/">Home</a></li>
+                        <li class="menu_links-link"><a href="education.html">Formação</a></li>
+                        <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
+                    </ul>
+                </nav>
+            </main>
+    </div>
+
+    <footer class="footer">
+        <p class="footer_title">Acesse minhas redes:</p>
+        <div class="footer_links">
+            <a href="https://github.com/renata-aline" target="_blank">
+                <img src="assets/logogit.png" alt="logo github" class="footer_links-icone">
+            </a>
+            <a href="https://instagram.com/renataaolyveira" target="_blank">
+                <img src="assets/logoinsta.png" alt="logo instagram" class="footer_links-icone">
+            </a>
+            <a href="https://www.linkedin.com/in/renata-aline-oliveira-3a1766270/" target="_blank">
+                <img src="assets/logolinkedin.png" alt="Logo linkedin" class="footer_links-icone">
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=5511986100092" target="_blank">
+                <img src="assets/logowhats.png" alt="logo whatsapp" class="footer_links-icone">
+            </a>
+        </div>
+
+    </footer>
 </body>
-
 
 </html>
