--- a/skill.html
+++ b/skill.html
@@ -26,8 +26,8 @@
             <section class="main-content">
                 <h2 class="title">HABILIDADES</h2>
                 <p class="presentation_content">
-                    Tenho conhecimento básico em HTML,CSS,JavaScript,git,figma.
-                    Excel básico,inglês básico.
+                    Tenho conhecimento básico em HTML, CSS, JavaScript, git, Figma, React,
+                    Excel básico, inglês básico.
                     Tenho muita vontade de aprender e boa disposição pra fazer acontecer.
 
                 </p>
