ajuste de  rota

--- a/education.html
+++ b/education.html
@@ -42,7 +42,7 @@
             </section>
             <nav class="menu">
                 <ul class="menu_links">
-                    <li class="menu_links-link"><a href="/">Home</a></li>
+                    <li class="menu_links-link"><a href="index.html">Home</a></li>
                     <li class="menu_links-link active"><a href="education.html">Formação</a></li>
                     <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
                 </ul>
