--- a/index.html
+++ b/index.html
@@ -31,18 +31,17 @@
                         Amo viajar e sou bem aventureira ,apaixonada por esportes, principalmente os que pratico em meio
                         a
                         natureza.
-                        Trabalho como babá e estou fasendo transição de carreira para área de tecnologia.
+                        Trabalho como babá e estou fazendo transição de carreira para área de tecnologia.
                         Nesse momento estou visando plano de carreira e crescimento profissional .
-                        Escolhi estudar tecnologia porque é uma área que tenho bastante interesse
-                        ,é uma área que abre portas para oportunidades profissionais
-                        e te prepara para um mundo em constante mudanças.
-
+                        Escolhi estudar tecnologia porque a tecnologia contribui bastante com o avanço da sociedade e abre portas para um mundo 
+                        cheio de oportunidades.
+                        
                     </p>
 
                 </section>
                 <nav class="menu">
                     <ul class="menu_links">
-                        <li class="menu_links-link active"><a href="/">Home</a></li>
+                        <li class="menu_links-link active"><a href="index.html">Home</a></li>
                         <li class="menu_links-link"><a href="education.html">Formação</a></li>
                         <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
                     </ul>
