--- a/skill.html
+++ b/skill.html
@@ -35,7 +35,7 @@
             </section>
             <nav class="menu">
                 <ul class="menu_links">
-                    <li class="menu_links-link"><a href="/">Home</a></li>
+                    <li class="menu_links-link"><a href="index.html">Home</a></li>
                     <li class="menu_links-link"><a href="education.html">Formação</a></li>
                     <li class="menu_links-link active"><a href="skill.html">Habilidades</a></li>
                 </ul>
