melhorias no código

--- a/index.html
+++ b/index.html
@@ -15,38 +15,39 @@
 
 <body>
     <div class="wrapper">
-        <header>
-            <header class="profile">
-                <img class="avatar" src="assets/foto-renata.jpg" alt="Foto Renata">
-                <div>
-                    <h1 class="profile-title">Renata Aline De Oliveira</h1>
-                    <spam class="profile-subtitle">Desenvolvedora Front-End</spam>
-                </div>
-            </header>
-            <main>
-                <section class="main-content">
-                    <h2 class="title">SOBRE MIM</h2>
-                    <p class="presentation_content">
-                        Meu nome é Renata.
-                        Amo viajar e sou bem aventureira ,apaixonada por esportes, principalmente os que pratico em meio
-                        a
-                        natureza.
-                        Trabalho como babá e estou fazendo transição de carreira para área de tecnologia.
-                        Nesse momento estou visando plano de carreira e crescimento profissional .
-                        Escolhi estudar tecnologia porque a tecnologia contribui bastante com o avanço da sociedade e abre portas para um mundo 
-                        cheio de oportunidades.
-                        
-                    </p>
+        <header class="profile">
+            <img class="avatar" src="assets/foto-renata.jpg" alt="Foto Renata">
+            <div>
+                <h1 class="profile-title">Renata Aline De Oliveira</h1>
+                <spam class="profile-subtitle">Desenvolvedora Front-End</spam>
+            </div>
+        </header>
+        <main>
+            <section class="main-content">
+                <h2 class="title">SOBRE MIM</h2>
+                <p class="presentation_content">
+                    Meu nome é Renata.
+                    Amo viajar e sou bem aventureira ,apaixonada por esportes, principalmente os que pratico em meio
+                    a
+                    natureza.
+                    Trabalho como babá e estou fazendo transição de carreira para área de tecnologia.
+                    Estou em busca de uma oportunidade de estágio em desenvolvimento web.
+                    Nesse momento estou visando plano de carreira crescimento profissional e pessoal.
+                    Escolhi estudar tecnologia porque a tecnologia contribui bastante com o avanço da sociedade e abre
+                    portas para um mundo
+                    cheio de oportunidades.
 
-                </section>
-                <nav class="menu">
-                    <ul class="menu_links">
-                        <li class="menu_links-link active"><a href="index.html">Home</a></li>
-                        <li class="menu_links-link"><a href="education.html">Formação</a></li>
-                        <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
-                    </ul>
-                </nav>
-            </main>
+                </p>
+
+            </section>
+            <nav class="menu">
+                <ul class="menu_links">
+                    <li class="menu_links-link active"><a href="index.html">Home</a></li>
+                    <li class="menu_links-link"><a href="education.html">Formação</a></li>
+                    <li class="menu_links-link"><a href="skill.html">Habilidades</a></li>
+                </ul>
+            </nav>
+        </main>
     </div>
 
     <footer class="footer">
